<resources>

    <string name="app_name">AppStart</string>
    <string name="hello_world">Hello world!</string>
    <string name="language_code">en</string>
    <string name="back">Back</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">App Start</string>
    <string name="contact">Contact</string>
    <string name="push_message">Push Message</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="webview">Webview</string>
    <string name="socialmedia">Social Media</string>
    <string name="cms">Cms</string>
    <string name="events">Events</string>
    <string name="document">Document</string>
    <string name="gallery">Image Gallery</string>
    <string name="music">Music</string>
    <string name="musicdetails">Music Details</string>
 
    
    
    <string name="location_name">Location name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="phone2">Phone2</string>
    <string name="phone3">Phone3</string>
    <string name="fax">Fax</string>
    <string name="address">Address</string>
    <string name="timings">Timings</string>
 
    <string name="mapkey">0lG8PwMEFe5ez9cCON-AZg2MYTdXY4hBfIaVQCw</string>
    
      <string-array name="layers_array">
    <item>@string/normal</item>
    <item>@string/hybrid</item>
    <item>@string/satellite</item>
    <item>@string/terrain</item>
  </string-array>
   <string name="hybrid">Hybrid</string>
     <string name="normal">Normal</string>
      <string name="terrain">Terrain</string>
      <string name="satellite">Satellite</string>
    
     <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    
    
    <string name="document_type_">Document Type:</string>
    <string name="keyword_">Keyword:</string>
    <string name="size_">Size:</string>

</resources>