<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lnr_cd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
         >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/lay_main_contact_details"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/txt_location_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_name"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_top" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_bg"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" >

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textColor="@color/darkgrey"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:text=""
                            android:textColor="@color/darkgrey" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/box_divider" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_bg"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textColor="@color/darkgrey"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/darkgrey" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/box_divider" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_bg"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/website"
                            android:textColor="@color/darkgrey"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_web"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/darkgrey" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/box_divider" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_bg"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone2"
                            android:textColor="@color/darkgrey"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_phone2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/darkgrey" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/box_divider" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_bg"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone3"
                            android:textColor="@color/darkgrey"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_phone3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/darkgrey" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@drawable/box_divider" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_bg"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fax"
                            android:textColor="@color/darkgrey"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_fax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/darkgrey" />
                    </RelativeLayout>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_bottom" />

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="@color/seperator"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:visibility="gone" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textColor="@color/darkgrey"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/darkgrey" />
                    </RelativeLayout>
                </LinearLayout>

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" >

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_top" />

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_bg"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/timings"
                            android:textColor="@color/darkgrey"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_tmg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/darkgrey" />
                    </TableRow>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/box_bottom" />
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>